fixed overflow x on changelog

--- a/styles.css
+++ b/styles.css
@@ -725,6 +725,7 @@ hr {
   transform: translate(-50%, -50%);
   background-color: rgba(255, 255, 255, 0.9);
   overflow-y: auto;
+  overflow-x: none;
   border: 2px solid black;
   padding: 5px;
 }
